[project]
name = "hw-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]
